Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-87218
Building iOS apps with a qmake that from a CMake-built Qt fails
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
P2: Important
Fix Version/s:
None
Affects Version/s:
6.0
Component/s:
Build System: CMake
Labels:
cmake_qt6
Platform/s:
iOS/tvOS/watchOS
Epic Link:
CMake Port: Milestone 4
Description
There are multiple issues, this is just a tracking issue for my Gerrit changes.
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Alexandru Croitor
Reporter:
Alexandru Croitor
Votes:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
06 Oct '20 15:51
Updated:
12 Oct '20 08:45
Resolved:
12 Oct '20 08:45
Gerrit Reviews
There are no open Gerrit changes
Show
There are 3 closed Gerrit changes
Hide
There are 3 closed Gerrit changes
CMake: Add iOS mkspec mapping for the wrapper qmake
Gerrit Review:
CMake: Export the chosen iOS SDK used when configuring Qt
Gerrit Review:
qmake: Fix iOS code signing after QSettings behavior change
Gerrit Review: